--- a/OdeToFood/OdeToFood/appsettings.json
+++ b/OdeToFood/OdeToFood/appsettings.json
@@ -7,5 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Message": "Hello from appsettings!"
+  "Message": "Hello from appsettings!",
+  "ConnectionStrings": {
+    "OdeToFoodDb": "TODO"
+  }
 }
